fixed spacing and background

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -1,10 +1,10 @@
 main 					{
-	padding-top:30px;
+	/*padding-top:30px;*/
 }
 /*********************************************************************************/
 /* Backgrounds                                                                   */
 /*********************************************************************************/
-	/*#home-bg{
+	#home-bg{
 		background:		url("../img/tree-background.jpg") no-repeat center center fixed;
 		-webkit-background-size: 	cover;
 		-moz-background-size: 		cover;
@@ -13,13 +13,14 @@ main 					{
 	}
 
 	#markethome-bg{
-		background:		url("../img/Blue-background.jpg") no-repeat center center fixed;
+		/*background:		url("../img/Blue-background.jpg") no-repeat center center fixed;*/
+		background-color: #eeeeee;
 		-webkit-background-size: 	cover;
 		-moz-background-size: 		cover;
 		-o-background-size: 		cover;
 		background-size:			cover;
-		height: 100%;
-	}*/
+/*		height: 100%;*/
+	}
 
 	#booth-available{
 		text-align: center;
@@ -33,7 +34,7 @@ main 					{
 		background: #CCFFCC;
 	}
 	
-	#bg-markethome{
+	/*#bg-markethome{
 	  position: fixed; 
 	  top: -50%; 
 	  left: -50%; 
@@ -70,7 +71,7 @@ main 					{
 	  margin: auto; 
 	  min-width: 50%;
 	  min-height: 50%;
-	}
+	}*/
 
 /*********************************************************************************/
 /* Basic                                                                         */
@@ -163,7 +164,7 @@ main 					{
 			}
 
 		header{
-			margin: 0 0 2em 0;
+			margin: 0 0 0 0;
 		}
 
 			header h2, header h3{
@@ -230,6 +231,7 @@ ol{
 ===================== */
 header .navbar 		{
 	border-radius:0;
+	margin-bottom: 0;
 }
 
 /* Button
@@ -298,8 +300,8 @@ header .navbar 		{
 		border-radius: 6px;
 		box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.015);
 		box-shadow: 0px 3px 0px 0px rgba(0,0,0,0.05);
-		padding-top: 2%;
-		padding-bottom: 2%;
+		/*padding-top: 2%;
+		padding-bottom: 2%;*/
 	}
 		.loginbox.buttons{
 			padding: 0 0 0 0;
